--- a/.i3/config
+++ b/.i3/config
@@ -8,6 +8,10 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
+# Mod1 alt
+# 2
+# 3 capslock
+# 4 super
 
 set $mod Mod1
 
@@ -88,17 +92,40 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
+#bindsym $mod+F1 workspace 1
+#bindsym $mod+F2 workspace 2
+#bindsym $mod+F3 workspace 3
+#bindsym $mod+F4 workspace 4
+#bindsym $mod+F5 workspace 5
+#bindsym $mod+F6 workspace 6
+#bindsym $mod+F7 workspace 7
+#bindsym $mod+F8 workspace 8
+#bindsym $mod+F9 workspace 9
+#bindsym $mod+F10 workspace 10
+
+
 # move focused container to workspace
-bindsym $mod+Shift+exclam move container to workspace 1
-bindsym $mod+Shift+quotedbl move container to workspace 2
-bindsym $mod+Shift+section move container to workspace 3
-bindsym $mod+Shift+dollar move container to workspace 4
-bindsym $mod+Shift+percent move container to workspace 5
-bindsym $mod+Shift+ampersand move container to workspace 6
-bindsym $mod+Shift+slash move container to workspace 7
-bindsym $mod+Shift+parenleft move container to workspace 8
-bindsym $mod+Shift+parenright move container to workspace 9
-bindsym $mod+Shift+equal move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8  move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+10 move container to workspace 10
+
+#bindsym $mod+Shift+exclam move container to workspace 1
+#bindsym $mod+Shift+quotedbl move container to workspace 2
+#bindsym $mod+Shift+section move container to workspace 3
+#bindsym $mod+Shift+dollar move container to workspace 4
+#bindsym $mod+Shift+percent move container to workspace 5
+#bindsym $mod+Shift+ampersand move container to workspace 6
+#bindsym $mod+Shift+slash move container to workspace 7
+#bindsym $mod+Shift+parenleft move container to workspace 8
+#bindsym $mod+Shift+parenright move container to workspace 9
+#bindsym $mod+Shift+equal move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+C reload
@@ -139,5 +166,7 @@ bindsym $mod+r mode "resize"
 #        status_command i3status
 #}
 
-exec_always xbindkeys
+exec_always xbindkeys 
+exec_always xmodmap ~/.Xmodmap.Neoangepasst  
+
 
