--- a/.i3/config
+++ b/.i3/config
@@ -174,6 +174,8 @@ new_window none
 
 exec_always xbindkeys 
 exec_always xmodmap ~/.Xmodmap.Neoangepasst  
+exec_always clipit -d  
+
 
 #exec ~/.screenlayout/dualdtop.sh			
 #exec chromium-browser					
